# learnqt

./: .editorconfig  .envrc  .gitignore  CMakeLists.txt  example-qml.pro  flake.nix
cpp/: main.cpp
qml/: main.qml
